--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,20 @@ p {
   transition: color var(--animation);
 }
 
+.current::after {
+  content: "";
+  position: absolute;
+  width: 48px;
+  height: 4px;
+  left: 0px;
+  top: 48px;
+  padding-top: 4px;
+  color: var(--color-OCEAN);
+  background: var(--color-OCEAN);
+  border-radius: 2px;
+  display: inline-block;
+}
+
 .header-link:hover,
 .header-link:focus {
   color: var(--color-IRIS);
@@ -141,8 +155,7 @@ p {
   line-height: 1.5;
   color: var(--color-SLATE);
   transition: color var(--animation);
-  }
-
+}
 
 .contact-link:hover,
 .contact-link:focus {
@@ -190,7 +203,7 @@ p {
   border-radius: 4px;
   cursor: pointer;
   border: none;
-  
+
   transition: background var(--animation), box-shadow var(--animation);
 }
 
@@ -468,7 +481,8 @@ p {
   border-radius: 4px;
   padding: 12px 24px;
   cursor: pointer;
-  transition: color var(--animation), background var(--animation), box-shadow var(--animation), border-radius var(--animation);
+  transition: color var(--animation), background var(--animation),
+    box-shadow var(--animation), border-radius var(--animation);
 }
 
 .button-filter:hover,
@@ -516,6 +530,23 @@ p {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
+.overlay {
+  position: relative;
+
+  overflow: hidden;
+}
+
+.image-hover-text {
+  position: relative;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--color-CLOUD);
+  background: var(--color-IRIS);
+  background-blend-mode: soft-light;
+  mix-blend-mode: normal;
+}
+
 .project-wrapper {
   padding-top: 32px;
   padding-bottom: 32px;
@@ -532,4 +563,21 @@ p {
 .gallery-program {
   line-height: 1.5;
   color: var(--color-SLATE);
+}
+
+/* _________________MODAL_________________ */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height:100%;
+  background: rgba(46, 47, 66, 0.4);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
